--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.example</groupId>
-  <artifactId>neo4j-plugin-example</artifactId>
+  <groupId>com.yens</groupId>
+  <artifactId>neo4j-yens-plugin</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>neo4j-plugin-example</name>
@@ -12,12 +12,6 @@
     <groupId>org.neo4j</groupId>
     <artifactId>neo4j</artifactId>
     <version>5.20.0</version>
-    </dependency>
-    <dependency>
-        <groupId>org.neo4j</groupId>
-        <artifactId>neo4j-io</artifactId>
-        <version>4.4.0</version>
-        <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
