--- a/pom.xml
+++ b/pom.xml
@@ -1,23 +1,31 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.yens</groupId>
-  <artifactId>neo4j-yens-plugin</artifactId>
+  <groupId>com.bdpf</groupId>
+  <artifactId>neo4j-bidirectional-dijkstra-plugin</artifactId>
+<!-- dbms.security.procedures.unrestricted=jwt.security.*,neo4j-plugin-bidirectional-dijkstra.* -->
+<!-- dbms.security.procedures.allowlist=neo4j-plugin-bidirectional-dijkstra.* -->
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>neo4j-plugin-example</name>
+  <name>neo4j-plugin-bidirectional-dijkstra</name>
   <url>http://maven.apache.org</url>
+
   <dependencies>
     <dependency>
-    <groupId>org.neo4j</groupId>
-    <artifactId>neo4j</artifactId>
-    <version>5.20.0</version>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j</artifactId>
+      <version>5.20.0</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
-    </dependency> 
+    </dependency>
+    <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>42.7.4</version>
+    </dependency>
   </dependencies>
 </project>
